--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "katex": "^0.16.21",
+    "lucide-react": "^0.487.0",
     "next": "15.2.1",
     "nookies": "^2.5.2",
     "postcss": "^8.5.3",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dnd": "^16.0.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-quill": "^2.0.0",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
