--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.1.6",
     "axios": "^1.8.1",
     "chart.js": "^4.4.8",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "katex": "^0.16.21",
+    "lucide": "^0.487.0",
     "lucide-react": "^0.487.0",
     "next": "15.2.1",
     "nookies": "^2.5.2",
