--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
