--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "axios": "^1.8.1",
     "chart.js": "^4.4.8",
