--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@studio-freight/lenis": "^1.0.42",
     "axios": "^1.8.1",
     "chart.js": "^4.4.8",
     "clsx": "^2.1.1",
