--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^4.4.8",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "gsap": "^3.12.7",
     "katex": "^0.16.21",
     "lucide": "^0.487.0",
     "lucide-react": "^0.487.0",
