--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@react-icons/all-files": "^4.1.0",
     "axios": "^1.8.1",
     "chart.js": "^4.4.8",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "dialog": "^0.3.1",
     "katex": "^0.16.21",
     "lucide": "^0.487.0",
     "lucide-react": "^0.487.0",
@@ -26,12 +32,15 @@
     "react-chartjs-2": "^5.3.0",
     "react-dnd": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.55.0",
+    "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
     "swiper": "^11.2.6",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.0.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.9",
